##2014-03-04 - Supported Release 1.0.1
###Summary

Add metadata compatibility for PE 3.2.

##2014-03-04 - Supported Release 1.0.0
###Summary

This is the initial supported release of the ACL module.