@@ -1,11 +1,0 @@
-name    'puppetlabs-acl'
-version '1.0.1'
-source 'git://github.com/puppetlabs/puppetlabs-acl.git'
-author 'puppetlabs'
-license 'Apache License, Version 2.0'
-summary 'This module provides the ability to manace ACLs on nodes'
-description 'This module provides the ability to manace ACLs on nodes. Currently the only operating system supported is Windows'
-project_page 'https://github.com/puppetlabs/puppetlabs-acl'
-
-## Add dependencies, if any:
-# dependency 'username/name', '>= 1.2.0'
